--- a/components/Nav/styles.module.scss
+++ b/components/Nav/styles.module.scss
@@ -9,7 +9,7 @@ nav {
 	text-transform: uppercase;
 	flex-wrap: wrap;
 	background-color: #000000;
-	z-index: 400;
+	z-index: 300;
 	padding: 0 1ch;
 	color: #bbbbbb;
 
